--- a/src/main/resources/ihm/inscription-view.fxml
+++ b/src/main/resources/ihm/inscription-view.fxml
@@ -52,7 +52,7 @@
       </AnchorPane>
       <AnchorPane layoutX="282.0" layoutY="85.0" prefHeight="529.0" prefWidth="483.0">
          <children>
-            <Label alignment="CENTER" layoutX="-7.0" prefHeight="44.0" prefWidth="498.0" text="Inscription" textAlignment="CENTER" textFill="#224957" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
+            <Label fx:id="labelInscription" alignment="CENTER" layoutX="-7.0" prefHeight="44.0" prefWidth="498.0" text="Inscription" textAlignment="CENTER" textFill="#224957" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
                <font>
                   <Font name="Roboto Condensed Bold" size="48.0" />
                </font>
