--- a/src/main/resources/ihm/annuaire-view.fxml
+++ b/src/main/resources/ihm/annuaire-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -98,18 +99,29 @@
       </ImageView>
       <AnchorPane layoutX="232.0" layoutY="93.0" prefHeight="45.0" prefWidth="600.0">
          <children>
-            <TextField fx:id="searchBox" layoutX="205.0" layoutY="10.0" prefHeight="25.0" prefWidth="237.0" />
-            <ImageView fx:id="loupe" fitHeight="25.0" fitWidth="98.0" layoutX="462.0" layoutY="10.0" onMouseClicked="#rechercheLIKE" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+            <TextField fx:id="searchBox" layoutX="242.0" layoutY="10.0" prefHeight="9.0" prefWidth="237.0" style="-fx-background-color: white; -fx-border-color: #4C6B77;" />
+            <ImageView fx:id="loupe" fitHeight="25.0" fitWidth="98.0" layoutX="485.0" layoutY="11.0" onMouseClicked="#rechercheLIKE" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                <image>
                   <Image url="@../img/search.png" />
                </image>
             </ImageView>
-            <Label layoutX="67.0" layoutY="13.0" text="Recherche par nom">
+            <Label layoutX="41.0" layoutY="13.0" text="Rechercher par ">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
+            <ImageView fx:id="favoris" fitHeight="27.0" fitWidth="25.0" layoutX="516.0" layoutY="10.0" onMouseClicked="#getFavoris" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="10.0">
+               <image>
+                  <Image url="@img/star.png" />
+               </image>
+            </ImageView>
+            <ChoiceBox fx:id="rechercheBy" layoutX="143.0" layoutY="11.0" prefHeight="25.0" prefWidth="93.0" value="nom" />
          </children>
       </AnchorPane>
+      <Label fx:id="noResult" alignment="CENTER" layoutX="232.0" layoutY="169.0" prefHeight="27.0" prefWidth="600.0" text="Pas de résultats concordants" textFill="RED">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
