--- a/src/main/resources/ihm/accueil-view.fxml
+++ b/src/main/resources/ihm/accueil-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -63,5 +64,6 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <TableView fx:id="tableauEntreprise" layoutX="404.0" layoutY="126.0" prefHeight="380.0" prefWidth="590.0" />
    </children>
 </Pane>
