--- a/src/main/resources/ihm/profil2-view.fxml
+++ b/src/main/resources/ihm/profil2-view.fxml
@@ -46,7 +46,7 @@
                         <Font name="System Bold Italic" size="14.0" />
                     </font>
                 </Button>
-                <Label fx:id="admin" layoutX="52.0" layoutY="27.0"  style="-fx-cursor: hand;" text="Admin" textFill="WHITE">
+                <Label fx:id="admin" layoutX="52.0" layoutY="27.0" onMouseClicked="#versAdmin" style="-fx-cursor: hand;" text="Admin" textFill="WHITE">
                     <font>
                         <Font name="System Bold Italic" size="20.0" />
                     </font>
