Liste de langages

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -115,3 +115,6 @@
     -fx-background-radius: 20;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 }
+.listeViewLangagesSecondaires .list-cell{
+    -fx-font-size:12.0;
+}
